加入位置服务功能

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+
+    <!-- dialog color -->
+    <color name="dialog_title">#3CAC17</color>
+    <color name="dialog_message">#363636</color>
+    <color name="dialog_positive">#1E88E5</color>
+    <color name="dialog_negative">#F44336</color>
+    <color name="dialog_neutral">#F44336</color>
+    <color name="dialog_divider">#D5D5D5</color>
+    <color name="dialog_line">#CACACA</color>
+    <color name="dialog_bg">#FBFBFB</color>
 </resources>
